<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.nullnoname.pc3dssdemo.MainActivity" >

    <EditText
        android:id="@+id/editTextAudioBufferSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_audiobuffersize"
        android:inputType="number" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextAudioBufferSizeMultiplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_audiobuffersizemultiplier"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewSong0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonPlay0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play" />

        <Button
            android:id="@+id/buttonStop0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewSong1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonPlay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play" />

        <Button
            android:id="@+id/buttonStop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewSong2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonPlay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play" />

        <Button
            android:id="@+id/buttonStop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonPlaySE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play_se_ogg" />

    <ScrollView
        android:id="@+id/scrollViewLog"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_log" />

    </ScrollView>

</LinearLayout>
